--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2 id="modal-title" class="modal-title">النتيجة</h2>
                 <p id="modal-desc" class="modal-desc">تفاصيل النتيجة</p>
                 <div class="points-awarded" id="points-awarded"></div>
-                <button id="next-btn" class="primary-btn">التالي <lord-icon src="https://cdn.lordicon.com/vduqgxqy.json"
+                <button id="next-btn" class="primary-btn">التالي <lord-icon src="https://cdn.lordicon.com/whtfgdfm.json"
                         trigger="hover" style="width:24px;height:24px" colors="primary:#ffffff"></lord-icon></button>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <h2 class="modal-title">نهاية اللعبة!</h2>
                 <p class="modal-desc" id="final-score-text"></p>
                 <button id="restart-btn" class="primary-btn">العب مرة أخرى <lord-icon
-                        src="https://cdn.lordicon.com/rsnxqjld.json" trigger="hover" style="width:24px;height:24px"
+                        src="https://cdn.lordicon.com/rfzdcxqv.json" trigger="hover" style="width:24px;height:24px"
                         colors="primary:#ffffff"></lord-icon></button>
             </div>
         </div>
