--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2 class="modal-title">نهاية اللعبة!</h2>
                 <p class="modal-desc" id="final-score-text"></p>
                 <button id="restart-btn" class="primary-btn">العب مرة أخرى <lord-icon
-                        src="https://cdn.lordicon.com/rfzdcxqv.json" trigger="hover" style="width:24px;height:24px"
+                        src="https://cdn.lordicon.com/wloilxuq.json" trigger="hover" style="width:24px;height:24px"
                         colors="primary:#ffffff"></lord-icon></button>
             </div>
         </div>
